# AdventOfCode

./: CMakeLists.txt  README.md  aoc.cpp  aoc.h  day  defines  main.cpp
.github/workflows/: cmake.yml
year2016/: CMakeLists.txt
year2016/day12/: CMakeLists.txt  day_12.cpp
year2016/day13/: day_13.cpp
year2018/: CMakeLists.txt
year2018/day01/: CMakeLists.txt  day_01.cpp
year2018/day02/: CMakeLists.txt  day_02.cpp
year2018/day03/: CMakeLists.txt  day_03.cpp
year2018/day04/: CMakeLists.txt  day_04.cpp
year2021/: CMakeLists.txt  README.md
year2021/day01/: CMakeLists.txt  day_01.cpp
year2021/day02/: CMakeLists.txt
year2021/day03/: CMakeLists.txt
year2021/day04/: CMakeLists.txt  day_04.cpp
year2021/day05/: CMakeLists.txt  README.md  day_05.cpp
year2021/day06/: CMakeLists.txt  README.md  day06.h  day_06.cpp  day_6.cpp
year2021/day07/: CMakeLists.txt  README.md  day_07.cpp  day_7.cpp  day_7.h  main.cpp
year2021/day08/: CMakeLists.txt  README.md  day_08.cpp  day_8.cpp  day_8.h  main.cpp
year2021/day08/build-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  day8  qtcsettings.cmake
year2021/day08/build-Debug/.cmake/api/v1/reply/: cache-v2-20a78fbaa58f320b685b.json  cmakeFiles-v1-65d685b7cb1361fd1288.json  codemodel-v2-a822cd128053ffd2fb07.json  index-2021-12-17T20-48-15-0125.json  target-day8-Debug-bd16158d8a09ae717a61.json
year2021/day08/build-Debug/.qtc_clangd/: compile_commands.json
year2021/day08/build-Debug/.qtc_clangd/.cache/clangd/index/: __stddef_max_align_t.h.8E38E55A2C8F340C.idx  algorithmfwd.h.33138345B3B9F519.idx  alloc_traits.h.9A2CDF667233E4D8.idx  alloc_traits.h.DA49BC37F69964B7.idx  alloca.h.B3C3404035C15EA6.idx  allocator.h.9B08689EE532AC91.idx  array.28F4A4CBBA9ECF87.idx  basic_file.h.8F3B2C3A4BD2689B.idx  basic_ios.h.B2E30A80EA8E81C3.idx  basic_ios.tcc.1F906AFEA1CBAC67.idx  basic_string.h.34DE58078E05AE19.idx  basic_string.tcc.683C7052D6986B2B.idx  c++config.h.F56EA355E29C29BB.idx  c++io.h.2CAA4B6F46367CE5.idx  char_traits.h.FC832327D574A88F.idx  charconv.h.E6E321C11D7B4807.idx  codecvt.h.86C0211958F254A6.idx  compare.B4420F5BDD6C6D89.idx  concepts.1AEBCC1817340EA3.idx  cpp_type_traits.h.F76176253A001FFE.idx  cstdint.3EF3C6CD783524E6.idx  cstdio.BF0F59DA3DC6D83B.idx  cstdlib.42AB4853747EE3C9.idx  cxxabi_init_exception.h.CE89289339F5E495.idx  day_8.cpp.54DA0A6F8679B724.idx  day_8.h.D88FBB258A0750A3.idx  debug.h.9596B12A7B01FBDD.idx  enable_special_members.h.E9D23AC0762BA4AE.idx  erase_if.h.546B9B36997F9F53.idx  exception.866CF33CDCB97A4E.idx  exception.h.D6F9280E01873890.idx  exception_ptr.h.92D96B46F346CDB6.idx  features.h.839A4F3F7C9A4375.idx  fstream.F4766287A20A020E.idx  fstream.tcc.D627F4B06582A047.idx  functional_hash.h.9284FE693669B861.idx  hashtable.h.ABF8831900FAEB64.idx  hashtable_policy.h.C7BD118D05601F52.idx  invoke.h.7D19711420BFA574.idx  ios_base.h.D658136E54949A5A.idx  (+81 more)
year2021/day09/: CMakeLists.txt  README.md  day_09.cpp  day_9.cpp  main.cpp
year2021/day1/: CMakeLists.txt  README.md  day_1.cpp
year2021/day10/: CMakeLists.txt  README.md  day_10.cpp  day_10.h  main.cpp
year2021/day11/: CMakeLists.txt  README.md  day_11.cpp  day_11.h  main.cpp
year2021/day12/: CMakeLists.txt  README.md  day_12.cpp  day_12.h  main.cpp
year2021/day13/: CMakeLists.txt  README.md  day_13.cpp  day_13.h  main.cpp
year2021/day14/: CMakeLists.txt  README.md  day_14.cpp  day_14.h  main.cpp
year2021/day15/: CMakeLists.txt  README.md  day_15.cpp  day_15.h  main.cpp
year2021/day16/: CMakeLists.txt  README.md  day_16.cpp  day_16.h  main.cpp
year2021/day17/: CMakeLists.txt  README.md  day_17.cpp  day_17.h  main.cpp
year2021/day18/: CMakeLists.txt  README.md  day_18.cpp  day_18.h  main.cpp
year2021/day19/: CMakeLists.txt  README.md  day_19.cpp  day_19.h  main.cpp  testinput
year2021/day2/: CMakeLists.txt  README.md  day_2.cpp
year2021/day20/: CMakeLists.txt  README.md  day_20.cpp  day_20.h  main.cpp
year2021/day21/: CMakeLists.txt  README.md  day_21.cpp  day_21.h  main.cpp
year2021/day22/: CMakeLists.txt  README.md  day_22.cpp  day_22.h  main.cpp
year2021/day23/: CMakeLists.txt  README.md  day_23.cpp  day_23.h  main.cpp
year2021/day24/: CMakeLists.txt  README.md  day_24.cpp  day_24.h
year2021/day25/: CMakeLists.txt  README.md
year2021/day3/: CMakeLists.txt  README.md  day_3.cpp
year2021/day4/: CMakeLists.txt  README.md  bingoboard.cpp  bingoboard.h
year2021/day5/: CMakeLists.txt  day_5.cpp
year2021/day9/: day_9.cpp  day_9.h
year2022/: CMakeLists.txt
year2022/day1/: CMakeLists.txt  day_1  day_1.cpp
year2022/day11/: CMakeLists.txt  day_11.cpp
year2022/day12/: CMakeLists.txt  day_12.cpp
year2022/day13/: day_13.cpp
year2022/day14/: day_14.cpp
year2022/day15/: day_15.cpp
year2022/day16/: CMakeLists.txt  day_16.cpp
year2022/day17/: CMakeLists.txt  day_17.cpp
year2022/day18/: day_18.cpp
year2022/day2/: CMakeLists.txt  day_2.cpp
year2022/day20/: CMakeLists.txt  day_20.cpp
year2022/day23/: CMakeLists.txt  day_23.cpp
year2022/day25/: day_25.cpp
year2022/day3/: CMakeLists.txt  day_3.cpp
year2022/day4/: CMakeLists.txt  day_4.cpp
year2022/day5/: CMakeLists.txt  day_5.cpp
year2022/day6/: day_6.cpp
year2022/day7/: day_7.cpp
year2022/day8/: CMakeLists.txt
year2022/day9/: CMakeLists.txt  day_9.cpp
year2024/: CMakeLists.txt
year2024/day01/: CMakeLists.txt  day_01.cpp
year2024/day02/: CMakeLists.txt
year2024/day03/: CMakeLists.txt  day_03.cpp
year2024/day04/: CMakeLists.txt
year2024/day05/: CMakeLists.txt  day_05.cpp  day_5.cpp
year2024/day06/: CMakeLists.txt  day_06.cpp
year2024/day07/: CMakeLists.txt  day_07.cpp  day_7.cpp
year2024/day08/: CMakeLists.txt  day_08.cpp  day_8.cpp
year2024/day09/: CMakeLists.txt  day_09.cpp  day_9.cpp
year2024/day1/: CMakeLists.txt  day_1.cpp
year2024/day10/: CMakeLists.txt  day_10.cpp
year2024/day11/: CMakeLists.txt  day_11.cpp
year2024/day12/: day_12.cpp
year2024/day13/: CMakeLists.txt  day_13.cpp
year2024/day14/: CMakeLists.txt  day_14.cpp
year2024/day15/: CMakeLists.txt  day_15.cpp
(+1000 files in other folders)
